fix word wrap

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@ padding-bottom: 7px;
 }
 .post{
   padding: 0px 32px;
+
 }
 .post-content{
   margin-top: 23px;
@@ -72,6 +73,8 @@ padding-bottom: 7px;
   display: flex;
   flex-direction: column;
   row-gap: 7px;
+ 
+  overflow-wrap: break-word;
 }
 .post-title{
   color: #000;
@@ -88,6 +91,7 @@ padding-bottom: 7px;
   font-style: normal;
   font-weight: 300;
   line-height: normal;
+ 
 }
 .post-text{
   color: #000;
